# apple_silicon

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  soc.rs
