[package]
name = "apple_silicon"
version = "0.1.0"
edition = "2021"
description = "A common line tool for Apple Silicon"

license = "MIT"
authors = ["Franck Cuny <franck@fcuny.net>"]
repository = "https://github.com/fcuny/apple_silicon"
homepage = "https://github.com/fcuny/apple_silicon"
categories = ["command-line-utilities"]

[[bin]]
name = "apple_silicon"
path = "src/bin/apple_silicon.rs"

[dependencies]
thiserror = "1.0.61"
